add observer observable

--- a/EventHandler.vcxproj
+++ b/EventHandler.vcxproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\EventHandler.h" />
+    <ClInclude Include="include\Observer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
