--- a/EventHandler.vcxproj.filters
+++ b/EventHandler.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="include\EventHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Observer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
